# fleaflicker-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fleaflicker_cli/: __init__.py  cli.py  client.py  models.py
tests/: test_cli.py  test_client.py
